# doc-library

./: .env.local.example  .gitignore  README.md  pyproject.toml
.claude/skills/new-hosted-app/scripts/: scaffold_repo.py
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: doc_links.py  preferences.py
app/core/: config.py  nav.py  registry.py  templating.py
app/models/: __init__.py  doc_link.py  host_user.py  user_preference.py
app/pages/: doc_library.py  doc_links_fragments.py
app/schemas/: doc_link.py  user_preference.py
app/templates/pages/: doc_library.html
app/templates/partials/: _doc_link_macros.html  doc_links_list.html
docs/: changelog.md
docs/features/doc-library/WBS/: slice-1-repo-and-infra-setup.md  slice-2-sso-trust-tracer-bullet.md  slice-3-doc-link-crud.md  slice-4-view-mode-toggle.md  slice-5-prod-cutover.md  slice-6-design-system-adoption.md
migrations/: env.py
migrations/versions/: 0001_create_doc_library_schema.py  0002_create_doc_links_table.py  0003_create_user_preferences.py  0003_create_user_preferences_table.py
scripts/: build_css.py
tests/: conftest.py  test_doc_library_page.py  test_doc_link_model.py  test_doc_links_api.py  test_doc_links_fragments.py  test_host_user_model.py  test_preferences_api.py  test_registry_client_wiring.py  test_user_preference_model.py
